github to git (mistype)

--- a/demo.html
+++ b/demo.html
@@ -55,7 +55,7 @@
 		<a href="https://github.com/yangkun/jquery-rollover/tarball/master"><img src="https://github.com/images/modules/download/tar.png" width="80" alt="tar"/></a>
 	</p>
 
-	<h2>GitHub</h2>
+	<h2>Git</h2>
 
 	<p><a href="https://github.com/yangkun/jquery-rollover">https://github.com/yangkun/jquery-rollover</a></p>
 
